--- a/lab2 - Anpanman puzzle/Base.lproj/Main.storyboard
+++ b/lab2 - Anpanman puzzle/Base.lproj/Main.storyboard
@@ -361,7 +361,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-701.44927536231887" y="-317.41071428571428"/>
+            <point key="canvasLocation" x="-775" y="-707"/>
         </scene>
     </scenes>
     <resources>
