--- a/lab2 - Anpanman puzzle/Base.lproj/Main.storyboard
+++ b/lab2 - Anpanman puzzle/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.47"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -42,7 +42,7 @@
                                                         <rect key="frame" x="0.0" y="1" width="412" height="173"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <subviews>
-                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="1-9" translatesAutoresizingMaskIntoConstraints="NO" id="bVA-SO-hYn">
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="1-8" translatesAutoresizingMaskIntoConstraints="NO" id="bVA-SO-hYn">
                                                                 <rect key="frame" x="0.0" y="0.0" width="137" height="173"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             </imageView>
@@ -373,7 +373,6 @@
         <image name="1-6" width="314" height="314"/>
         <image name="1-7" width="314" height="314"/>
         <image name="1-8" width="314" height="314"/>
-        <image name="1-9" width="314" height="314"/>
         <image name="2-1" width="314" height="289"/>
         <image name="2-2" width="314" height="289"/>
         <image name="2-3" width="314" height="289"/>
@@ -392,9 +391,9 @@
         <image name="3-7" width="314" height="314"/>
         <image name="3-8" width="314" height="314"/>
         <image name="3-9" width="314" height="314"/>
-        <image name="header1" width="922" height="197"/>
-        <image name="header2" width="922" height="195"/>
-        <image name="header3" width="922" height="197"/>
+        <image name="header1" width="442.55999755859375" height="94.55999755859375"/>
+        <image name="header2" width="442.55999755859375" height="93.599998474121094"/>
+        <image name="header3" width="442.55999755859375" height="94.55999755859375"/>
         <image name="main" width="180" height="180"/>
         <image name="sticker" width="224" height="227"/>
         <image name="sticker fight" width="231" height="231"/>
