lab2 - Anpanman finish

--- a/lab2 - Anpanman puzzle/Base.lproj/Main.storyboard
+++ b/lab2 - Anpanman puzzle/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                                         <rect key="frame" x="0.0" y="1" width="412" height="173"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <subviews>
-                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="1-8" translatesAutoresizingMaskIntoConstraints="NO" id="bVA-SO-hYn">
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="1-9" translatesAutoresizingMaskIntoConstraints="NO" id="bVA-SO-hYn">
                                                                 <rect key="frame" x="0.0" y="0.0" width="137" height="173"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             </imageView>
@@ -373,6 +373,7 @@
         <image name="1-6" width="314" height="314"/>
         <image name="1-7" width="314" height="314"/>
         <image name="1-8" width="314" height="314"/>
+        <image name="1-9" width="314" height="314"/>
         <image name="2-1" width="314" height="289"/>
         <image name="2-2" width="314" height="289"/>
         <image name="2-3" width="314" height="289"/>
